--- a/.github/workflows/default-env.yml
+++ b/.github/workflows/default-env.yml
@@ -9,5 +9,13 @@ jobs:
       - name: Testing Secrets
         run: |
           echo "$GOOGLECALENDARAPIKEY"
+          echo "$GOOGLECALENDARID_KLUBBPOKER"
+          echo "$GOOGLECALENDARID_LIVE_SWEDEN"
+          echo "$GOOGLECALENDARID_LIVE_UTOMLANDS"
+          echo "$GOOGLECALENDARID_ONLINEPOKER"
         env:
           GOOGLECALENDARAPIKEY: ${{secrets.GOOGLECALENDARAPIKEY}}
+          GOOGLECALENDARID_KLUBBPOKER: ${{secrets.GOOGLECALENDARID_KLUBBPOKER}}
+          GOOGLECALENDARID_LIVE_SWEDEN: ${{secrets.GOOGLECALENDARID_LIVE_SWEDEN}}
+          GOOGLECALENDARID_LIVE_UTOMLANDS: ${{secrets.GOOGLECALENDARID_LIVE_UTOMLANDS}}
+          GOOGLECALENDARID_ONLINEPOKER: ${{secrets.GOOGLECALENDARID_ONLINEPOKER}}
